--- a/src/reset.css
+++ b/src/reset.css
@@ -3,3 +3,9 @@
     padding: 0;
     margin: 0;
 }
+
+@font-face{
+    font-family: 'Mona Sans';
+    src:  url('/fonts/Mona-Sans.woff2') format('woff2'), /* Super Modern Browsers */
+    url('/fonts/Mona-Sans.woff') format('woff'), /* Pretty Modern Browsers */
+}
