优化头部，新增底部

--- a/src/components/Header.module.less
+++ b/src/components/Header.module.less
@@ -9,6 +9,11 @@
     justify-content: space-between;
     gap: 40px;
 
+    .logo {
+        width: 90px;
+        height: auto;
+    }
+
     .right{
         display: flex;
         align-items: center;
