--- a/src/views/Home/Item.module.less
+++ b/src/views/Home/Item.module.less
@@ -1,7 +1,4 @@
 .contentContainer {
-    // flex: 1;
-    // max-width: calc((100% - 36px*3)/4);
-    // min-width: 270px; 
     width: calc((100% - 36px*2)/3);
     box-sizing: border-box;
 
@@ -23,8 +20,64 @@
             .shotImg {
                 width: 100%;
                 height: 100%;
-                // object-fit: cover;
-                background-color: blue;
+                object-fit: cover;
+            }
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            display: flex;
+            align-items: end;
+            z-index: 2;
+            background: linear-gradient(180deg, transparent 62%, rgba(0,0,0,0.00345888) 63.94%, rgba(0,0,0,0.014204) 65.89%, rgba(0,0,0,0.0326639) 67.83%, rgba(0,0,0,0.0589645) 69.78%, rgba(0,0,0,0.0927099) 71.72%, rgba(0,0,0,0.132754) 73.67%, rgba(0,0,0,0.177076) 75.61%, rgba(0,0,0,0.222924) 77.56%, rgba(0,0,0,0.267246) 79.5%, rgba(0,0,0,0.30729) 81.44%, rgba(0,0,0,0.341035) 83.39%, rgba(0,0,0,0.367336) 85.33%, rgba(0,0,0,0.385796) 87.28%, rgba(0,0,0,0.396541) 89.22%, rgba(0,0,0,0.4) 91.17%);
+            padding: 20px;
+            opacity: 0;
+
+            &:hover{
+                opacity: 100;
+                transition: opacity 0.3s ease-in-out;
+            }
+
+            .overlayContent {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                .title {
+                    color: #fff;
+                    font-family: "Mona Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+                    font-size: 16px;
+                    font-weight: 500;
+                    line-height: 22px;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                }
+
+                .action {
+                    margin-left: 20px;
+                    justify-self: flex-end;
+
+                    .likeAction {
+                        width: 40px;
+                        height: 40px;
+                        background-color: #fff;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 50%;
+    
+                        .likeIcon {
+                            width: 16px;
+                            height: 16px;
+                        }
+                    }
+                }
             }
         }
     }
@@ -36,6 +89,7 @@
         align-items: center;
 
         .userInfo {
+            overflow: hidden;
 
             .hoverableUrl {
                 display: flex;
@@ -62,8 +116,53 @@
                 }
             }
         }
-
         .statistics {
+            color: #3d3d4e;
+            font-family: "Mona Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 16px;
+            font-weight: 500;
+            
+
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+
+            .likeState {
+                display: flex;
+                align-items: center;
+                flex-wrap: nowrap;
+                margin-left: 8px;
+
+                .likeIcon {
+                    width: 16px;
+                    height: 16px;
+                    color: #9e9ea7;
+                    margin-right: 4px;
+                    fill: currentColor;
+
+                    &:hover {
+                        color: #ea64d9;
+                        fill: currentColor;
+                    }
+                }
+            }
+
+            .viewState {
+                display: flex;
+                align-items: center;
+                flex-wrap: nowrap;
+                margin-left: 8px;
+
+                .viewIcon {
+                    width: 16px;
+                    height: 16px;
+                    color: #9e9ea7;
+                    margin-right: 4px;
+                    fill: currentColor;
+                }
+            }
 
         }
     }
