--- a/src/views/Home/index.module.less
+++ b/src/views/Home/index.module.less
@@ -1,10 +1,27 @@
 .main{
     padding: 0 72px;
+    min-height: calc(100vh - 100px - 197.05px);
 
     .contentsList {
         display: flex;
         flex-wrap: wrap;
         gap: 36px;
+
+    }
+}
+
+.loadMoreButton {
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    height: 60px;
+    width: 100%;
+
+    .button {
+        font-size: 14px;
+        width: 100px;
+        height: 30px;
+        border-radius: 20px;
 
     }
 }
