按id跳转到详情页

--- a/src/views/Content/Content.module.less
+++ b/src/views/Content/Content.module.less
@@ -113,7 +113,7 @@
                 }
 
                 .progressBar {
-
+                    width: 100%;
                 }
 
                 .toggleMuteButton {
