--- a/src/views/Content/Content.module.less
+++ b/src/views/Content/Content.module.less
@@ -101,6 +101,18 @@
             overflow: hidden;
             border-radius: 8px;
 
+            .imgHeader{
+                position: relative;
+                width: 100%;
+                height: 100%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
             .videoPlayer {
                 position: relative;
                 width: 100%;
