--- a/src/views/Home/index.module.less
+++ b/src/views/Home/index.module.less
@@ -2,6 +2,14 @@
     padding: 0 72px;
     min-height: calc(100vh - 100px - 197.05px);
 
+    @media (max-width: 1200px){
+        padding: 0 32px;
+    }
+
+    @media (max-width: 764px){
+        padding: 0 20px;
+    }
+
     .contentsList {
         display: flex;
         flex-wrap: wrap;
