--- a/src/views/Content/Content.module.less
+++ b/src/views/Content/Content.module.less
@@ -11,7 +11,6 @@
         align-items: center;
         max-width: 1172px;
 
-
         .title {
             height: 29px;
             margin-bottom: 10px;
@@ -39,7 +38,6 @@
                 height: 100%;
                 gap: 12px;
                 display: flex;
-                gap: 12px;
                 align-items: center;
 
                 .userPhoto {
@@ -49,8 +47,12 @@
                     overflow: hidden;
 
                     a{
+                        width: 100%;
+                        height: 100%;
                         img{
-                            height: 48px;
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
                         }
                     }
                 }
@@ -70,6 +72,11 @@
                         font-weight: 500;
                         font-size: 12px;
                         color: #6e6d7a;
+                        width: 100%;
+                        overflow: hidden;
+                        text-wrap: nowrap;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
 
                         .like {
                             color: #4daa57;
@@ -85,7 +92,7 @@
                 justify-content: flex-end;
                 align-items: center;
                 gap: 12px;
-
+                margin-left: 20px;
             }
 
 
@@ -178,6 +185,8 @@
                     width: 72px;
                     height: 72px;
                     margin: 0 24px;
+                    object-fit: cover;
+                    border-radius: 50%;
                 }
             }
 
