--- a/src/views/Content/HtmpComp.module.less
+++ b/src/views/Content/HtmpComp.module.less
@@ -1,8 +1,22 @@
 .htmlComp{
+    *{
+        margin: 16px 0 16px 0;
+    }
+
+    p {
+        font-family: "Mona Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 28px;
+        
+    }
+
     img {
         max-width: 100%;
         height: auto;
         overflow: hidden;
         border-radius: 8px;
+        width: 100%;
+        height: auto;
     }
 }
