--- a/src/views/Home/Item.module.less
+++ b/src/views/Home/Item.module.less
@@ -135,17 +135,8 @@
                 flex-wrap: nowrap;
                 margin-left: 8px;
 
-                .likeIcon {
-                    width: 16px;
-                    height: 16px;
-                    color: #9e9ea7;
-                    margin-right: 4px;
-                    fill: currentColor;
-
-                    &:hover {
-                        color: #ea64d9;
-                        fill: currentColor;
-                    }
+                span {
+                    margin-left: 4px;
                 }
             }
 
@@ -154,12 +145,15 @@
                 align-items: center;
                 flex-wrap: nowrap;
                 margin-left: 8px;
+                
+                span {
+                    margin-left: 4px;
+                }
 
                 .viewIcon {
                     width: 16px;
                     height: 16px;
                     color: #9e9ea7;
-                    margin-right: 4px;
                     fill: currentColor;
                 }
             }
