--- a/src/components/Footer.module.less
+++ b/src/components/Footer.module.less
@@ -5,6 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 
     .upperContainer {
         width: 100%;
