--- a/src/components/Header.module.less
+++ b/src/components/Header.module.less
@@ -2,18 +2,23 @@
   padding-left: 40px;
   padding-right: 40px;
   overflow: hidden;
+  @media (max-width: 940px) {
+    padding-left: 24px;
+    padding-right: 24px;
+}
 
   .navbar {
+    width: 100%;
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 40px;
-
+    
     .logo {
         width: 90px;
         height: auto;
         cursor: pointer;
+
     }
 
     .right{
@@ -29,6 +34,11 @@
             display: flex;
             align-items: center;
             padding: 0 24px;
+
+            @media (max-width: 430px) {
+
+            }
+
 
             .search_icon {
                 width: 16px;
