--- a/src/views/Content/Content.module.less
+++ b/src/views/Content/Content.module.less
@@ -4,10 +4,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 120px 0 120px;
 
     @media (max-width: 920px){
-        padding: 0 16px 0 16px;
+        padding: 32px 16px 32px 16px;
     }
 
     .contentContainer {
@@ -185,10 +184,10 @@
             }
         }
 
-        .contentContainer {
+        .richtextContainer {
             width: 100%;
             max-width: 752px;
-            margin: 36px 0;
+
         }
 
         .userDetails {
