--- a/src/components/GetInTouchIcon.module.less
+++ b/src/components/GetInTouchIcon.module.less
@@ -1,25 +1,27 @@
-.button {
-    display: flex;
-    align-items: center;
-    background-color: #0d0c22;
-    color: #fff;
-    height: 40px;
-    padding: 10px 20px;
-    text-align: center;
-    text-wrap: nowrap;
-    
+.buttonLink{
+    text-decoration: none;
+    overflow: hidden;
     border-radius: 99999px;
-    font-size: 13px;
-    font-weight: 600;
 
-    box-sizing: border-box;
-
-    cursor: pointer;
-
-    .icon {
-        width: 16px;
-        height: 16px;
-        margin: 0 5px 0 0;
-    }
+    .button {
+        display: flex;
+        align-items: center;
+        background-color: #0d0c22;
+        color: #fff;
+        height: 40px;
+        padding: 10px 20px;
+        text-align: center;
+        text-wrap: nowrap;
     
+        font-size: 13px;
+        font-weight: 600;
+    
+        box-sizing: border-box;
+    
+        .icon {
+            width: 16px;
+            height: 16px;
+            margin: 0 5px 0 0;
+        }
+    }
 }
