--- a/src/components/Header.module.less
+++ b/src/components/Header.module.less
@@ -35,10 +35,9 @@
             align-items: center;
             padding: 0 24px;
 
-            @media (max-width: 430px) {
-
+            @media (max-width: 500px) {
+                max-width: 120px;
             }
-
 
             .search_icon {
                 width: 16px;
@@ -46,6 +45,7 @@
             }
 
             .search_input{
+                overflow: hidden;
                 border: none;
                 outline: 0;
                 margin-left: 24px;
