--- a/src/views/Content/Content.module.less
+++ b/src/views/Content/Content.module.less
@@ -81,8 +81,9 @@
                     }
 
                     .status{
-                        font-weight: 500;
+                        font-weight: 600;
                         font-size: 12px;
+                        font-feature-settings: 'ss01';
                         color: #6e6d7a;
                         width: 100%;
                         overflow: hidden;
