--- a/src/views/Content/HtmpComp.module.less
+++ b/src/views/Content/HtmpComp.module.less
@@ -8,7 +8,7 @@
         font-size: 16px;
         font-weight: 400;
         line-height: 28px;
-        
+        font-feature-settings: 'ss01';
     }
 
     img {
