实现getInTouch组件可选性的自适应

--- a/src/components/GetInTouchIcon.module.less
+++ b/src/components/GetInTouchIcon.module.less
@@ -23,5 +23,18 @@
             height: 16px;
             margin: 0 5px 0 0;
         }
+
+    }
+}
+
+.mediaQuery {
+    overflow: hidden;
+    border-radius: 99999px;
+    @media (max-width: 500px) {
+
+        .buttonLink {
+            display: none;
+            overflow: hidden;
+        }
     }
 }
