--- a/src/components/Footer.module.less
+++ b/src/components/Footer.module.less
@@ -56,6 +56,14 @@
         justify-content: space-between;
         padding: 44px 0;
 
+        @media(max-width: 600px){
+
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            row-gap: 6px;
+        }
+
         .lowerList {
             display: flex;
             justify-content: flex-end;
