--- a/src/views/Content/Content.module.less
+++ b/src/views/Content/Content.module.less
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 
     @media (max-width: 920px){
         padding: 32px 16px 32px 16px;
