--- a/src/views/Content/HtmpComp.module.less
+++ b/src/views/Content/HtmpComp.module.less
@@ -5,10 +5,16 @@
 
     p {
         font-family: "Mona Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        font-size: 16px;
+        font-size: 20px;
         font-weight: 400;
-        line-height: 28px;
+        line-height: 32px;
         font-feature-settings: 'ss01';
+
+        @media(max-width: 760px){
+            font-size: 16px;
+            line-height: 28px;
+        }
+        
     }
 
     img {
