修复bug：竖比例头像变形显示

--- a/src/views/Content/Content.module.less
+++ b/src/views/Content/Content.module.less
@@ -192,6 +192,7 @@
 
             .photo_detail {
                 width: 100%;
+                height: auto;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
@@ -201,12 +202,20 @@
                     border: 1px solid #e7e7e9;
                 }
 
-                img {
+                .userPhotoBelow {
+                    margin: 0 24px;
+                    overflow: hidden;
+                    border-radius: 50%;
                     width: 72px;
                     height: 72px;
-                    margin: 0 24px;
-                    object-fit: cover;
-                    border-radius: 50%;
+                    min-width: 72px;
+                    min-height: 72px;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
                 }
             }
 
