实现富文本中的图片预览功能

--- a/src/views/Content/Content.module.less
+++ b/src/views/Content/Content.module.less
@@ -181,6 +181,11 @@
             width: 100%;
             max-width: 752px;
 
+            * {
+                width: 100%;
+                height: auto;
+            }
+
         }
 
         .userDetails {
