--- a/src/views/Content/HtmpComp.module.less
+++ b/src/views/Content/HtmpComp.module.less
@@ -19,10 +19,16 @@
 
     img {
         max-width: 100%;
-        height: auto;
         overflow: hidden;
         border-radius: 8px;
         width: 100%;
         height: auto;
     }
+
+    iframe {
+        width: 100%;
+        height: auto;
+        aspect-ratio: 1980/1260;
+    }
+
 }
