--- a/src/views/Home/index.module.less
+++ b/src/views/Home/index.module.less
@@ -91,6 +91,7 @@
                     padding: 0 16px;
                     color: #0d0c22;
                     border-radius: 20px;
+                    cursor: pointer;
 
                     &:hover {
                         color: rgb(110, 109, 122);
