格式优化、富文本样式修复

--- a/src/views/Content/HtmpComp.module.less
+++ b/src/views/Content/HtmpComp.module.less
@@ -1,6 +1,6 @@
 .htmlComp{
     *{
-        margin: 16px 0 16px 0;
+        margin: 32px 0;
     }
 
     p {
@@ -14,7 +14,6 @@
             font-size: 16px;
             line-height: 28px;
         }
-        
     }
 
     img {
@@ -23,12 +22,21 @@
         border-radius: 8px;
         width: 100%;
         height: auto;
-    }
+    } 
 
     iframe {
         width: 100%;
         height: auto;
-        aspect-ratio: 1980/1260;
+        aspect-ratio: 75/42;
+        overflow: hidden;
+        border-radius: 8px;
+        margin: 16px 0;
+    }
+
+    video {
+        overflow: hidden;
+        border-radius: 8px;
+        margin: 16px 0;
     }
 
 }
